--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,1 +1,6 @@
 
+first pick the call and pay me to get you contract configurations and backend code
+this code cant give u shit...until u pay me wat u own
+dapp with out the contract back end and configurations 
+is nothing but a 404 error page
+or a 508 gateway problem
